<resources>
    <string name="app_name">L10 My NDP Songs</string>
    <string name="songID">Song ID</string>
    <string name="songTitle">Song Title</string>
    <string name="hintTitle">Enter song title here</string>
    <string name="singer">Singers</string>
    <string name="hintSinger">Enter singers\' name here</string>
    <string name="year">Year</string>
    <string name="hintYear">Enter year of release here</string>
    <string name="stars">Stars</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="insert">Insert</string>
    <string name="showlist">Show List</string>
    <string name="show5Star">Show only songs with 5 Stars</string>
    <string name="showAll">Show all songs</string>
</resources>