<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/songTitle" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintTitle"/>

        <TextView
            android:id="@+id/tvSinger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singer" />

        <EditText
            android:id="@+id/etSinger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintSinger" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintYear" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stars" />

    <RatingBar
        android:id="@+id/rbStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert" />

        <Button
            android:id="@+id/btnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/showlist" />
    </LinearLayout>

</LinearLayout>